fixed spacing styling in albums page

--- a/frontend/src/components/UserAlbums/UserAlbums.css
+++ b/frontend/src/components/UserAlbums/UserAlbums.css
@@ -28,8 +28,8 @@
   flex-wrap: wrap;
   justify-content: flex-start;
   /* padding-top: 50px; */
-  margin-left: 160px;
-  margin-right: 160px;
+  margin-left: 150px;
+  margin-right: 123px;
 }
 
 .albums-info {
